End of first(home) page, not responsive(i'll seen bugs)

--- a/app/scss/_content.scss
+++ b/app/scss/_content.scss
@@ -2,8 +2,7 @@
     max-width: 980px;
     margin: 0 auto;
     position: initial;
-    margin-top: 110px;
-    // background-color: $white-color;
+    margin-top: 110px; // background-color: $white-color;
     section {
         border: 1px solid rgba(255, 255, 255, 1);
         background-color: rgba(255, 255, 255, 1);
@@ -29,6 +28,53 @@
                 padding-left: 70px;
                 line-height: 20px;
                 font-size: 16px;
+            }
+        }
+        &#second {
+            img {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .lessons-info {
+                margin-bottom: 20px;
+                text-align: center;
+                .info-header {
+                    font-size: 22px;
+                }
+                .info-text {
+                    padding: 10px;
+                    font-size: 14px;
+                    line-height: 1.6;
+                }
+            }
+        }
+        &#third {
+            .lesson-wrap {
+                -webkit-border-radius: 5px;
+                border-radius: 5px;
+                background-color: #fff;
+                -webkit-box-shadow: 0 0 5px 1px #000;
+                box-shadow: 0 1px 5px 1px #e6e2e2;
+                margin-top: 10px;                
+                letter-spacing: .3px;
+                padding: 20px;
+                min-height: 350px;
+                margin-bottom: 20px;
+                h4 {
+                    text-align: center;
+                }
+                ul {
+                    margin-top: 20px;
+                    font-size: 12px;
+                    li {
+                        background: url(../img/icons/tick_s.png) no-repeat left top;
+                        list-style: none;
+                        padding-right: 20px;
+                        padding-left: 40px;
+                        margin-bottom: 10px;
+                    }
+                }
             }
         }
     }
@@ -72,15 +118,16 @@
                     margin-top: 10px;
                     margin-bottom: 10px;
                     background-color: $yellow-color;
-                    
                     background: linear-gradient(to bottom, #ffc533 0, #fb652b 100%);
                     border-radius: 4px;
                     border: 1px solid transparent;
                     height: 40px;
                     color: $white-color;
-                    &:hover,:active,:focus{
+                    &:hover,
+                     :active,
+                     :focus {
                         color: #212121;
-                        background: linear-gradient(to bottom,#d2ff52 0,#9bcb07 100%);
+                        background: linear-gradient(to bottom, #d2ff52 0, #9bcb07 100%);
                     }
                 }
             }
